--- a/webextensions/sidebar/styles/photon/highcontrast.css
+++ b/webextensions/sidebar/styles/photon/highcontrast.css
@@ -106,10 +106,10 @@ tab-item.active tab-closebox:hover::before {
 }
 
 /* macOS workaround */
-:root.platform-mac #tabbar:dir(rtl).overflow tab-item:not(.pinned) {
+:root.platform-mac.left #tabbar.overflow tab-item:not(.pinned) {
   padding-left: var(--scrollbar-placeholder-size); /* it will be enough larger than the default padding */
 }
-:root.platform-mac #tabbar:dir(ltr).overflow tab-item:not(.pinned) {
+:root.platform-mac.right #tabbar.overflow tab-item:not(.pinned) {
   padding-right: var(--scrollbar-placeholder-size); /* it will be enough larger than the default padding */
 }
 
